# Sketchle-Desktop

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md
src/: Application.cpp  Application.h  Clock.cpp  Clock.h  EventHandler.cpp  EventHandler.h  Input.cpp  Input.h  Window.cpp  Window.h  global.h  main.cpp
src/gui/: Button.cpp  Button.h  GUIElement.cpp  GUIElement.h  Slider.cpp  Slider.h  Textbox.cpp  Textbox.h
src/networking/: NetworkClient.cpp  NetworkClient.h  NetworkReceiver.cpp  NetworkReceiver.h  NetworkSender.cpp  NetworkSender.h  NetworkSetup.h  NetworkType.h
src/scene/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
src/scene/scenes/: CanvasScene.cpp  CanvasScene.h  MainMenuScene.cpp  MainMenuScene.h
src/scene/scenes/CanvasTools/: Tool.cpp  Tool.h  ToolType.h
src/utils/: ColorUtil.h  CurlUtil.h
